--- a/css/module.css
+++ b/css/module.css
@@ -79,6 +79,30 @@
 }
 
 /******************
+Front page
+******************/
+.slideshow {
+	height: 500px;
+	height:100vh;
+}
+
+.slideshow-figure {
+	overflow: hidden;
+	height: 100%
+}
+
+.slideshow-image {
+	vertical-align: middle;
+	
+	position: relative;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-o-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
+/******************
 Single Aktivitet
 ******************/
 .calendarDate {
